--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -20,6 +20,7 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -125,6 +126,9 @@ dependencies {
     //Maps & Geofencing
     implementation "com.google.android.gms:play-services-location:$playServicesVersion"
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+
+    //AuthUI
+    implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
 
 
 }
