--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -56,7 +56,8 @@ ext {
     truthVersion = '0.44'
     junitVersion = '4.13.2'
     androidXTestCoreVersion = '1.3.0'
-    robolectricVersion = '4.3.1'
+    //https://github.com/robolectric/robolectric/issues/5454 do not upgrade. bug with firebase in current 4.3.1
+    robolectricVersion = '4.2'
     androidXTestExtKotlinRunnerVersion = '1.1.2'
     archTestingVersion = '2.1.0'
     playServicesVersion = '17.0.0'
